--- a/flask/grpmgr/templates/index.html
+++ b/flask/grpmgr/templates/index.html
@@ -30,16 +30,18 @@
                 <div class="tab-pane fade show active" id="users">
                     <div class="search-section mb-4">
                         <div class="input-group mt-3">
-                            <input type="text" id="userSearchInput" class="form-control" placeholder="Search users...">
+                            <input type="text" id="userSearchInput" class="form-control" placeholder="Search users..." onkeypress="if(event.key === 'Enter') searchUsers()">
                             <button class="btn btn-primary" type="button" onclick="searchUsers()">Search</button>
                         </div>
                     </div>
+
 
                     <div id="selectedUsersSection" class="mb-4">
                         <h5>Selected Identities</h5>
                         <div id="selectedUsers" class="selected-items"></div>
                     </div>
 
+                    <div id="userSpinner" class="spinner"></div>
                     <div id="userSearchResults" class="search-results"></div>
                 </div>
 
@@ -47,7 +49,7 @@
                 <div class="tab-pane fade" id="groups">
                     <div class="search-section mb-4">
                         <div class="input-group mt-3">
-                            <input type="text" id="groupSearchInput" class="form-control" placeholder="Search groups...">
+                            <input type="text" id="groupSearchInput" class="form-control" placeholder="Search groups..." onkeypress="if(event.key === 'Enter') searchGroups()">
                             <button class="btn btn-primary" type="button" onclick="searchGroups()">Search</button>
                         </div>
                     </div>
@@ -57,6 +59,7 @@
                         <div id="selectedGroup" class="selected-items"></div>
                     </div>
 
+                    <div id="groupSpinner" class="spinner"></div>
                     <div id="groupSearchResults" class="search-results"></div>
 
                     <div class="mt-4">
